fix: fix module html

--- a/public/module.html
+++ b/public/module.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Module</title>
-  <script src="./script1.js" module></script>
-  <script src="./script2.js" module></script>
+  <script src="./script1.js" type="module"></script>
+  <script src="./script2.js" type="module"></script>
 </head>
 <body>
   Module
