--- a/public/module-async.html
+++ b/public/module-async.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Module Async</title>
-  <script src="./script1.js" module async></script>
-  <script src="./script2.js" module async></script>
+  <script src="./script1.js" type="module" async></script>
+  <script src="./script2.js" type="module" async></script>
 </head>
 <body>
   Module
